--- a/index.html
+++ b/index.html
@@ -57,6 +57,11 @@
     .links a:hover {
       text-decoration: underline;
     }
+    .bio {
+      font-size: 1.1rem;
+      margin-top: 10px;
+      color: #d1d5db;
+    }
     footer {
       margin-top: 60px;
       font-size: 0.9rem;
@@ -70,10 +75,8 @@
 
   <div class="container">
     <h1>Gaurav Goyal</h1>
-    <p><strong>AI & GenAI Educator</strong></p>
-    <p>
-      I help beginners and professionals understand <strong>AI, Generative AI, and Data</strong>
-      through simple explanations, practical resources, and real-world learning paths.
+    <p class="bio">
+      Hi, I’m <strong>Gaurav Goyal</strong> — an AI and Generative AI educator. I help beginners and professionals learn AI, Python, and data skills through simple explanations, practical resources, and real-world projects.
     </p>
 
     <div class="links">
@@ -81,6 +84,7 @@
       <a href="https://x.com/GauravGoyalAI" target="_blank">X (Twitter)</a>
       <a href="https://www.instagram.com/gauravgoyalai" target="_blank">Instagram</a>
       <a href="https://github.com/gauravgoyal" target="_blank">GitHub</a>
+      <a href="getting-started-generative-ai.html">Read My First AI Article →</a>
     </div>
 
     <h2>What I Teach</h2>
