--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     </p>
 
     <div class="links">
-      <a href="https://www.linkedin.com/in/gaurav-goyal-b742355" target="_blank">LinkedIn</a>
+      <a href="https://www.linkedin.com/in/gaurav-goyalai" target="_blank">LinkedIn</a>
       <a href="https://x.com/GauravGoyalAI" target="_blank">X (Twitter)</a>
       <a href="https://www.instagram.com/gauravgoyalai" target="_blank">Instagram</a>
       <a href="https://github.com/gauravgoyal" target="_blank">GitHub</a>
@@ -117,3 +117,4 @@
 
 </body>
 </html>
+
