--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       <a href="https://www.linkedin.com/in/gaurav-goyalai" target="_blank">LinkedIn</a>
       <a href="https://x.com/GauravGoyalAI" target="_blank">X (Twitter)</a>
       <a href="https://www.instagram.com/gauravgoyalai" target="_blank">Instagram</a>
-      <a href="https://github.com/gauravgoyal" target="_blank">GitHub</a>
+      <a href="https://github.com/gauravgoyalai" target="_blank">GitHub</a>
       <a href="getting-started-generative-ai.html">Read My First AI Article →</a>
     </div>
 
@@ -117,4 +117,5 @@
 
 </body>
 </html>
+
 
