--- a/index.html
+++ b/index.html
@@ -18,6 +18,16 @@
       max-width: 900px;
       margin: auto;
       padding: 40px 20px;
+      text-align: center;
+    }
+    .profile-pic {
+      width: 150px;
+      height: 150px;
+      border-radius: 50%;
+      display: block;
+      margin: 0 auto 20px;
+      border: 3px solid #38bdf8;
+      object-fit: cover;
     }
     h1 {
       font-size: 2.5rem;
@@ -34,6 +44,8 @@
     }
     ul {
       padding-left: 20px;
+      text-align: left;
+      display: inline-block;
     }
     li {
       margin-bottom: 8px;
@@ -61,6 +73,7 @@
       font-size: 1.1rem;
       margin-top: 10px;
       color: #d1d5db;
+      margin-bottom: 30px;
     }
     footer {
       margin-top: 60px;
@@ -74,16 +87,19 @@
 <body>
 
   <div class="container">
+    <!-- Profile Picture -->
+    <img src="profile.jpg" alt="Gaurav Goyal" class="profile-pic">
+
     <h1>Gaurav Goyal</h1>
     <p class="bio">
       Hi, I’m <strong>Gaurav Goyal</strong> — an AI and Generative AI educator. I help beginners and professionals learn AI, Python, and data skills through simple explanations, practical resources, and real-world projects.
     </p>
 
     <div class="links">
-      <a href="https://www.linkedin.com/in/gaurav-goyalai" target="_blank">LinkedIn</a>
+      <a href="https://www.linkedin.com/in/gauravgoyalai" target="_blank">LinkedIn</a>
       <a href="https://x.com/GauravGoyalAI" target="_blank">X (Twitter)</a>
       <a href="https://www.instagram.com/gauravgoyalai" target="_blank">Instagram</a>
-      <a href="https://github.com/gauravgoyalai" target="_blank">GitHub</a>
+      <a href="https://github.com/gauravgoyal" target="_blank">GitHub</a>
       <a href="getting-started-generative-ai.html">Read My First AI Article →</a>
     </div>
 
@@ -117,5 +133,3 @@
 
 </body>
 </html>
-
-
